Fix navigation style on mobile

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -233,6 +233,15 @@ code {
     .next-page {
         bottom: 10px;
     }
+
+    .nav {
+        padding-top: 0.5em;
+    }
+
+    .nav__wrapper {
+        z-index: 1000;
+        background: white;
+    }
 }
 
 blockquote.tip {
